Fixed blurry lines

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -18,6 +18,4 @@ body {
 
 #gameCanvas {
     position: fixed;
-    width: 100%;
-    height: 100%;
 }
